Add a ScopedNestableTaskAllower to Fix Tab Navigation

MacOS's alert dialog seems to need allowing nestable tasks for tab
navigation to work.

BUG=778562

Change-Id: Ic8654defa4e6ec1c7089639108e8a937e923b486